--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
             <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
+                    <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
                     <span id="jinaHolder2">
-                        Bank Logins Available
+                        Welcome to Darkweb . LAT
                     </span>
                 </div>
             </a>
