--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,7 @@
                 <div class="section-heading">
                     <h4 class="set" id="invoice-type"> </h4>
                 </div>
-                <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
-                    <img src="img/partners/gogle.png" id="sign-img">
-                </button>
+                <canvas id="canvas2" width="65px" height="65px"  data-bs-dismiss="modal"></canvas>
             </div>
             <div class="modal-body">
                 <p class="modal-p" id="save-1"></p> <hr class="thehr thero">
