--- a/public/404.html
+++ b/public/404.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="index">
-            Home Page <img src="img/partners/user.png">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#emailModal">
+            Login Now <img src="img/partners/user.png">
         </a>
     </div>
 
@@ -135,7 +135,7 @@
     <script src="js/main/core.login.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/pages/index.js"></script>
+    <script src="js/pages/door.js"></script>
 
 </body>
 </html>
