--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
     <script src="js/main/core.login.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/pages/index.js"></script>
+    <script src="js/pages/door.js"></script>
 
 </body>
 </html>
