--- a/public/pnc.html
+++ b/public/pnc.html
@@ -654,7 +654,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            View Cart <img src="img/partners/cloud.png">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
     
