--- a/public/download.html
+++ b/public/download.html
@@ -5003,17 +5003,17 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                 </p> <hr class="thehr">
 
 
-                <form  id="the-form" onsubmit="signUpFunction()">
+                <form  id="the-form">
                     <div class="form-group col-md-12" id="form">
                         <div id="the-life">
                             <img id="the-flag7" />
-                            <input type="text" class="form-control" id="inputLife" autofocus placeholder="Enter Email / Phone" required>
+                            <input type="text" class="form-control" id="inputLife" autofocus readonly required>
                         </div> <div id="recaptcha-container"></div>
                     </div> <hr class="thehr" id="hr">
 
                     <li class="next">
                         <a class="butn modal-btn" id="anon-check" style="letter-spacing: 1.7px !important;">
-                            Send Link <img src="img/partners/tele.png">
+                            Download <img src="img/partners/cloud.png">
                         </a>
                     </li>
                 </form>
@@ -5023,34 +5023,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>   
 </div>
 
-<div class="modal fade"  id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <div class="section-heading"> <h4 class="set" id="ver-code"> VERIFY CODE </h4> </div>
-                <button type="button" class="close" id="ver-logo" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    <img src="img/partners/comm.png">
-                </button>
-            </div>
-            <div class="modal-body">
-                <p class="modal-p"  id="dave-1">
-                    Check your phone inbox <br> and enter the <span>code</span>.
-                </p> <hr class="thehr thero">
-                <p class="modal-p" id="dave-2">
-                    Use the code to verify your <br> <span id="uidy">phone number</span>.
-                </p> <hr class="thehr">
-                <div class="form-group col-md-12"> <div id="code-life">
-                        <input type="text" class="form-control" id="code" autofocus placeholder="Enter The Code..." required>
-                </div> </div>  <hr class="thehr">
-                <li class="next">
-                    <button type="submit" class="butn modal-btn" id="signInWithPhone">
-                        Verify Now <img src="img/partners/tele.png">
-                    </button>
-                </li>
-            </div>
-        </div>
-    </div>   
-</div>
 
 <div class="modal fade" id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
