--- a/public/login.html
+++ b/public/login.html
@@ -306,6 +306,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
     <script src="js/main/login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
