--- a/public/404.html
+++ b/public/404.html
@@ -218,6 +218,10 @@
 
     </div>
 
+    <div class="section-heading" id="section-index">
+        <h4></h4>
+    </div>
+
 </section>
 
 
@@ -228,10 +232,6 @@
 
 
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
-
-    <div class="section-heading" id="section-index">
-        <h4></h4>
-    </div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
         <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
@@ -306,6 +306,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
     <script src="js/main/login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
