--- a/public/404.html
+++ b/public/404.html
@@ -311,7 +311,7 @@
     <script src="js/main/login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/login.js"></script>
-    <script src="js/fire/login.js"></script>
+    <script src="js/auth/login.js"></script>
 
 </body>
 </html>
