--- a/public/download.html
+++ b/public/download.html
@@ -1682,7 +1682,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/fire/download.js"></script>
+    <script src="js/auth/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
 </body>
