--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -187,7 +187,9 @@
 
 <!-- start contact info section -->
 <section class="parallax" data-background="img/wall/woodforest2.jpg" data-scroll-index="5">
-    <div class="opacity-full-dark bg-extra-dark-gray"></div>
+    <div class="opacity-full-dark bg-extra-dark-gray"> 
+        <div id="particles-xs"></div> 
+    </div>
     <div class="container-fluid infinite-floating">
     <div class="row">
 
@@ -433,6 +435,10 @@
 
 </div>
 
+<div class="section-heading">
+    <h4 id="titlelogs3" > </h4>
+</div>
+
 </section>
 
 
@@ -450,12 +456,6 @@
 <!-- start contact info section -->
 <section id="cd-time" class="parallax cd-container" data-background="img/wall/woodforest2.jpg" data-scroll-index="5" style="padding: 0; margin: 0;  display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
-
-    <div class="section-heading">
-        <h4 id="titlelogs3" >
-            Cashout Method
-        </h4>
-    </div>
 
     <div class="infinite-floating therow owl-theme owl-carousel" id="services-carousel">
 
@@ -633,38 +633,12 @@
 
 
     </div>
-</section>
+
+    <div class="opacity-full-dark bg-extra-dark-gray"> </div>
     
-
-
-
-<!-- start contact info section -->
-<section class="parallax" data-background="img/wall/woodforest2.jpg" style="padding: 0;">
-    <div class="opacity-full-dark bg-extra-dark-gray">
-        <div id="particles-xs"></div> 
-    </div>
-
-    <div class="section-heading">
-        <h4></h4>
-    </div>
-
-    <div class="owl-carousel owl-theme clients"  id="clients">
-        <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
-        <div class="item"><img alt="" src="img/carousel/chase.jpg"></div>
-        <div class="item"><img alt="" src="img/carousel/chime.png"></div>
-        <div class="item"><img alt="" src="img/carousel/citi.jpg"></div>
-        <div class="item"><img alt="" src="img/carousel/huntington.jpg"></div>
-        <div class="item"><img alt="" src="img/carousel/navyfederal.png"></div>
-        <div class="item"><img alt="" src="img/carousel/pnc.png"></div>
-        <div class="item"><img alt="" src="img/carousel/rbc.png"></div>
-        <div class="item"><img alt="" src="img/carousel/td.png"></div>
-        <div class="item"><img alt="" src="img/carousel/truist.jpg"></div>
-        <div class="item"><img alt="" src="img/carousel/wellsfargo.png"></div>
-        <div class="item"><img alt="" src="img/carousel/woodforest.jpg"></div>
-    </div>
-
 </section>
 <!-- end footer -->
+
     
 </div>
 <!-- end main-wrapper section -->
