--- a/public/login.html
+++ b/public/login.html
@@ -168,7 +168,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-lg-5 col-md-7 col-12 center-col" id="invoice-div">
+            <div class="col-lg-5 col-md-7 col-12 center-col" id="invoice-div" style="z-index: 9999 !important;">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
     
@@ -217,6 +217,8 @@
         </div>
 
     </div>
+
+    <div class="opacity-full-dark bg-extra-dark-gray"> </div>
 
     <div class="section-heading" id="section-index">
         <h4></h4>
