--- a/public/home.html
+++ b/public/home.html
@@ -658,8 +658,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
-                    Bank Logins <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                    Download IT <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
