--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,13 @@
                                 <div id="my-invoice">
                                     <div class="text-center section-heading">
                                         <p id="would">
-                                            A login link will be sent <br>
-                                            via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                         
                                         </p>
 
                                         <hr class="nohr">
 
                                         <p id="wild">
-                                            Use the link to login here.
+                                            
                                         </p>
 
                                         <hr class="nohr">
@@ -63,8 +62,7 @@
                                             <div class="form-group col-md-12" id="form">
                                                 <div id="the-life">
                                                     <img id="the-flag7" />
-                                                    <input type="text" class="form-control" id="inputLife" autofocus
-                                                     placeholder="Enter Email / Phone" required>
+                                                    <input type="text" class="form-control" id="inputLife" autofocus required>
                                                 </div> <div id="recaptcha-container"></div>
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
