--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -921,7 +921,7 @@
     </div>
 </div>
 
-    <script src="js/cart/gle.js"></script>
+    <script src="js/cart/won.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
