--- a/public/home.html
+++ b/public/home.html
@@ -503,7 +503,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 col-md-12 col-12 display-none">
+            <div class="col-lg-6 col-md-12 col-12">
                 <div class="modal-content" id="modalsend">
                     
                     <div class="brock">
@@ -517,24 +517,7 @@
                         </div>
                         <div class="modal-body">
                             <canvas id="chart1"></canvas>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-md-12 col-12">
-                <div class="modal-content" id="modalsend">
-                    
-                    <div class="brock">
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="titlelogs2">
-                                Chart Data
-                            </h4>
-                            <button type="button" class="close" id="bitcoin-logo2">
-                                <img src="img/partners/chartline.png">
-                            </button>
-                        </div>
-                        <div class="modal-body">
+                            <hr class="nohr">
                             <canvas id="chart4"></canvas>
                         </div> 
                     </div>
