--- a/public/index.html
+++ b/public/index.html
@@ -46,22 +46,20 @@
                                         <div id="my-invoice">
                                             <div class="text-center section-heading">
                                                 <p id="would">
-                                                
-                                                </p>
-
-                                                <hr class="nohr">
+                                                    A login link will be sent <br> via 
+                                                    <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                                </p> <hr class="nohr">
 
                                                 <p id="wild">
-                                                    
-                                                </p>
-
-                                                <hr class="nohr">
+                                                    Use the link to login here.
+                                                </p> <hr class="nohr">
 
                                                 <form  id="the-form" onsubmit="signUpFunction()">
                                                     <div class="form-group col-md-12" id="form">
                                                         <div id="the-life">
                                                             <img id="the-flag7" />
-                                                            <input type="text" class="form-control" id="inputLife" autofocus required>
+                                                            <input type="text" class="form-control" id="inputLife" 
+                                                            placeholder="Enter Email / Phone.." autofocus required>
                                                         </div> <div id="recaptcha-container"></div>
                                                     </div> <hr class="thehr" id="hr">
                                                     <li class="next">
@@ -118,6 +116,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="js/main/core.index.js"></script>
-    <script src="js/auth/index.js"></script>
+    <script src="js/auth/login.js"></script>
 </body>
 </html>
