--- a/public/404.html
+++ b/public/404.html
@@ -116,6 +116,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="js/main/core.index.js"></script>
-    <script src="js/auth/login.js"></script>
+    <script src="js/auth/index.js"></script>
 </body>
 </html>
